Make Östergatan more dynamic